--- a/index.html
+++ b/index.html
@@ -5,10 +5,77 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Веб студия</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-
 </head>
 <body>
-          <h1>Тест</h1>  
+
+    <header class="header">
+        <div class="menu">
+            <div class="container">
+                <nav class="menu__nav">
+                    <a href="#" class="menu__link">Главная</a>
+                    <a href="#" class="menu__link">Материалы</a>
+                    <a href="#" class="menu__link">Каталог</a>
+                    <a href="#" class="menu__link">Примеры работ</a>
+                    <a href="#" class="menu__link">Примерка изображений</a>
+                    <a href="#" class="menu__link">Стоимость</a>
+                    <a href="#" class="menu__link">О студии</a>
+                </nav>
+            </div>
+            <!-- /.container -->
+        </div>
+        <!-- /.menu -->
+        <div class="navbar">
+            <div class="container">
+                <div class="navbar-wrap">
+                    <button class="menu-button navbar__menu-button">
+                        <span class="menu-button__line"></span>
+                        <span class="menu-button__line"></span>
+                        <span class="menu-button__line"></span>
+                    </button>
+                    <div class="logo navbar__logo">
+                        <strong class="logo__text">Профи</strong>
+                        <span class="logo__description">Мебельная студия</span>
+                    </div>
+                    <!-- /.logo navbar__logo -->
+                    <div class="navbar__mobile">
+                        <a class="navbar__phone" href="tel:+30501725044">+30501725044</a>
+                        <span class="navbar__work-time navbar__small-text">без выходных 9-21</span>
+                    </div>
+                    <div class="navbar__land-line">
+                        <a class="navbar__phone" href="tel:+79119058046">+79119058046</a>
+                        <a class="navbar__email navbar__small-text" href="mailto:">simon9980@gmail.com</a>
+                    </div>
+                    <button class="button-o navbar__button">Получить консультацию</button>
+                </div>
+                <!-- /.navbar-wrap -->
+
+            </div>
+            <!-- /.container -->
+        </div>
+        <!-- /.navbar -->
+        <div class="hero">
+            <div class="container">
+                <div class="container">
+                    <h1 class="hero__title">
+                        Производство <br>в кратчайшие сроки
+                    </h1>
+                    <span class="hero__subtitle">
+                        низкая стоимость работ
+                    </span>
+                    <button class="button hero__button">сделать заказ</button>
+                </div>
+                <!-- /.container -->
+            </div>
+        </div>
+        <!-- /.hero -->
+    </header>
+    <!-- /.header -->
+
+
+
+
+
 </body>
 </html>
