Сверстан адаптив для главного экрана

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Веб студия</title>
+    <title>Профи студия</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -35,8 +35,9 @@
                         <span class="menu-button__line"></span>
                     </button>
                     <div class="logo navbar__logo">
-                        <strong class="logo__text">Профи</strong>
-                        <span class="logo__description">Мебельная студия</span>
+                        <strong class="logo__text">МЕБЕЛЬНАЯ СТУДИЯ "ПРОФИ"</strong>
+                        <span class="logo__description">
+                            Производство в кратчайшие сроки</span>
                     </div>
                     <!-- /.logo navbar__logo -->
                     <div class="navbar__mobile">
