Подключение spikme виджета

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
     </header>
     <!-- /.header -->
 
-
-
+    <!-- Подключение виджета обратной связи через соцсети -->
+    <script type="text/javascript" src="https://spikmi.com/Widget?Id=716"></script>
 
 
 </body>
